# code-craft

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: filesystem.rs  mod.rs  pty.rs  worktree.rs
src/components/layout/: Sidebar.tsx
src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  Panel.tsx  index.ts
src/features/terminal/components/: TerminalPanel.tsx  XTerminal.tsx
src/features/workspace/: index.ts
src/features/workspace/components/: FileTree.tsx  FileTreeItem.tsx  MonacoEditorPane.tsx  TerminalPane.tsx  WorkspaceHeader.tsx  WorkspaceView.tsx
src/features/worktree-graph/components/: ForkWorktreeModal.tsx  WorktreeCanvas.tsx  WorktreeNode.tsx
src/features/worktree-graph/hooks/: useWorktreeLayout.ts
src/lib/: environment.ts  storage.ts  tauri.ts  terminal-theme.ts  utils.ts
src/store/: index.ts  projectStore.ts  terminalStore.ts  uiStore.ts  workspaceStore.ts  worktreeStore.ts
src/styles/: globals.css
