[package]
name = "codecraft"
version = "0.1.0"
description = "Visual Git Worktree Manager"
authors = ["Mat Groves"]
edition = "2021"

[lib]
name = "codecraft_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "io-util"] }
portable-pty = "0.8"
parking_lot = "0.12"
lazy_static = "1.4"
dirs = "5"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
